<resources>
    <string name="app_name">AmiGO</string>
    <string name="title_activity_explore_locations">ExploreLocationsActivity</string>
    <string name="lblSelectType">Select the type of places you want to see</string>
    <string name="lblSearchResults">Search Results</string>
    <string name="menu_explore">Explore</string>
    <string name="menu_trips">Trips</string>
    <string name="menu_settings">Setting</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign Up</string>
    <string name="logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings_heading">Settings</string>
    <string name="home_heading">Home</string>
    <string name="explore_heading">Explore</string>
    <string name="trips_heading">Trips</string>
    <string name="preference">Preference</string>
    <string name="preferences_heading">Preferences</string>
    <string name="client_id" translatable="false">783620285662-map1o1s0vibf4tjjtf52b9mi6vq7bjg1.apps.googleusercontent.com</string>
    <string name="settings">Settings</string>
    <string name="trips_fragment_heading">Your Trips</string>
    <string name="create_trip_button_text">Create New</string>
    <string name="trip_name_text">Trip Name</string>
    <string name="trip_start_date_text">Start Date:</string>
    <string name="trip_end_date_text">End Date:</string>
    <string name="btn_view_trip_text">View</string>
    <string name="create_trip_heading_text">Enter Trip Details</string>
    <string name="lbl_trip_name">Trip Name</string>
    <string name="lbl_trip_location">Trip Location </string>
    <string name="lbl_trip_image">Add an image for your trip</string>
    <string name="lbl_pick_trip_image">Add an optional display picture for the trip?</string>
    <string name="lbl_trip_description">Trip Description</string>
    <string name="btn_home_text">Home</string>
    <string name="btn_add_activity_text">Add new activity +</string>
    <string name="lbl_itinerary_text">Itinerary</string>
    <string name="lbl_activity_name">Activity Name</string>
    <string name="lbl_activity_date">Date</string>
    <string name="lbl_activity_start_time">Start Time</string>
    <string name="lbl_activity_end_time">End Time</string>
    <string name="lbl_activity_category">Category</string>
    <string name="lbl_activity_location">Location where activity takes place</string>
    <string name="lbl_activity_details">Enter Activity Details</string>
    <string name="btn_pick_start_date">Pick Start Date</string>
    <string name="btn_pick_end_date">Pick End Date</string>
    <string name="btn_pick_display_image">Pick Display Image</string>
    <string name="btn_save_trip">Save Trip</string>
    <string name="btn_pick_date">Pick Date</string>
    <string name="btn_pick_start_time">Pick Start Time</string>
    <string name="btn_pick_end_time">Pick End Time</string>
    <string name="btn_save_activity">Save Activity</string>
    <string name="txt_create_new_trip">Create a new Trip</string>
    <string name="email">Email</string>
    <string name="afrikaans">Afrikaans</string>
    <string name="zulu">Zulu</string>
    <string name="english">English</string>
    <string name="home">Home</string>
    <string name="trips">Trips</string>
    <string name="explore">Explore</string>

</resources>