<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/lblHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_heading"
            android:textSize="35sp"
            android:layout_marginVertical="30dp"
            android:layout_marginHorizontal="20dp"/>
        <!--<TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/trips_fragment_heading"/>-->
        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:textSize="27sp"
            android:text="@string/txt_create_new_trip"
            android:layout_gravity="center"/>
        <Button
            android:id="@+id/btnCreateTrip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#0F9D58"
            android:text="@string/create_trip_button_text" />

    </LinearLayout>




</FrameLayout>