<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".TripItineraryActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/btnHomeFromItinerary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_home_text"
                    android:backgroundTint="@color/quantum_lightgreen700"
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="10dp"/>
                <TextView
                    android:id="@+id/txtTripName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_trip_name"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_marginRight="4dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:text="@string/lbl_itinerary_text"/>

            </LinearLayout>

            <Button
                android:id="@+id/btnAddActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_add_activity_text"
                android:backgroundTint="@color/quantum_googgreen900"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="10dp"/>

            <FrameLayout
                android:id="@+id/trip_itinerary_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="300dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"/>

            <fragment xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/activitiesMap"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginBottom="10dp"/>
        </LinearLayout>

    </ScrollView>





</LinearLayout>