<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
       >

        <TextView
            android:id="@+id/lblTripName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/trip_name_text"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textAppearance="?attr/textAppearanceListItem" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/lbl_trip_start_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:text="@string/trip_start_date_text"
                android:textAppearance="?attr/textAppearanceListItem" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="-"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/lbl_trip_end_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:text="@string/trip_start_date_text"
                android:textAppearance="?attr/textAppearanceListItem" />

        </LinearLayout>

        <Button
            android:id="@+id/btnViewTrip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/quantum_lightgreen"
            android:text="@string/btn_view_trip_text" />

    </LinearLayout>



</LinearLayout>