<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddTripActivity"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/lbl_activity_details"
                android:textSize="20sp"
                android:layout_marginBottom="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/lbl_activity_name"
                android:textSize="10sp"
                android:layout_marginBottom="5dp"/>
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtActivityName"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center_horizontal"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/lbl_activity_category"
                android:textSize="10sp"
                android:layout_marginBottom="5dp"/>

            <Spinner
                android:id="@+id/categorySpinner"
                android:layout_width="220dp"
                android:layout_height="40dp"
                android:layout_marginLeft="16dp"
                android:layout_gravity="center"
                android:layout_marginRight="16dp"
                android:background="@color/quantum_grey800"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/lbl_activity_date"
                android:textSize="10sp"
                android:layout_marginBottom="2dp"/>
            <TextView
                android:id="@+id/txtActivityDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text=""
                android:textSize="8sp"
                android:layout_marginBottom="10dp"/>

            <Button
                android:id="@+id/btnPickDate"
                android:layout_width="150dp"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:text="Pick Date"
                android:layout_marginBottom="20dp"
                android:backgroundTint="@color/quantum_lightgreen700"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/lbl_activity_start_time"
                android:textSize="10sp"
                android:layout_marginBottom="2dp"/>
            <TextView
                android:id="@+id/txtActivityStartTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text=""
                android:textSize="8sp"
                android:layout_marginBottom="10dp"/>

            <Button
                android:id="@+id/btnPickStartTime"
                android:layout_width="150dp"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/quantum_lightgreen700"
                android:text="Pick Start Time"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/lbl_activity_end_time"
                android:textSize="10sp"
                android:layout_marginBottom="5dp"/>
            <TextView
                android:id="@+id/txtActivityEndTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text=""
                android:textSize="8sp"
                android:layout_marginBottom="10dp"/>
            <Button
                android:id="@+id/btnPickEndTime"
                android:layout_width="150dp"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/quantum_lightgreen700"
                android:text="Pick Start Time"
                android:layout_marginBottom="20dp"/>

            <ImageView
                android:id="@+id/iv_preview_trip_display"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:context=".AddTripActivity"
                android:layout_marginBottom="20dp" >

                <fragment
                    android:id="@+id/activity_location_autocomplete_fragment"
                    android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </FrameLayout>

            <Button
                android:id="@+id/btnSaveActivity"
                android:layout_width="150dp"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/quantum_lightblue700"
                android:text="Save Trip"
                android:layout_marginBottom="10dp"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>